force-app/main/default/objects/int_Affaire__c/int_Affaire__c.object-meta.xml
<CustomObject>
    <label>int_Affaire</label>
    <nameField>
        <label>Nom de int_Affaire</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>int_affaires</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>