force-app/main/default/objects/int_Affaire__c/fields/Chef_de_projet__c.field-meta.xml
<CustomField>
    <fullName>Chef_de_projet__c</fullName>
    <label>Chef de projet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>