force-app/main/default/objects/int_Affaire__c/fields/Code_ati__c.field-meta.xml
<CustomField>
    <fullName>Code_ati__c</fullName>
    <label>Code_ati</label>
    <length>255</length>
    <type>Text</type>
</CustomField>