force-app/main/default/objects/int_Affaire__c/fields/Code_produit__c.field-meta.xml
<CustomField>
    <fullName>Code_produit__c</fullName>
    <label>Code produit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>