force-app/main/default/objects/int_Affaire__c/fields/code_rg_bw__c.field-meta.xml
<CustomField>
    <fullName>code_rg_bw__c</fullName>
    <label>code_rg_bw</label>
    <length>255</length>
    <type>Text</type>
</CustomField>