force-app/main/default/objects/int_Affaire__c/fields/codeClient__c.field-meta.xml
<CustomField>
    <fullName>codeClient__c</fullName>
    <label>codeClient</label>
    <type>TextArea</type>
</CustomField>