force-app/main/default/objects/int_Affaire__c/fields/codeCommande__c.field-meta.xml
<CustomField>
    <fullName>codeCommande__c</fullName>
    <label>codeCommande</label>
    <type>TextArea</type>
</CustomField>