force-app/main/default/objects/int_Affaire__c/fields/codeDepartement__c.field-meta.xml
<CustomField>
    <fullName>codeDepartement__c</fullName>
    <label>codeDepartement</label>
    <type>TextArea</type>
</CustomField>