force-app/main/default/objects/int_Affaire__c/fields/DateFinDeGarantie__c.field-meta.xml
<CustomField>
    <fullName>DateFinDeGarantie__c</fullName>
    <label>DateFinDeGarantie</label>
    <type>Date</type>
</CustomField>