force-app/main/default/objects/int_Affaire__c/fields/dateLivraison__c.field-meta.xml
<CustomField>
    <fullName>dateLivraison__c</fullName>
    <label>dateLivraison</label>
    <type>Date</type>
</CustomField>