force-app/main/default/objects/int_Affaire__c/fields/DateMiseService__c.field-meta.xml
<CustomField>
    <fullName>DateMiseService__c</fullName>
    <label>DateMiseService</label>
    <type>Date</type>
</CustomField>