force-app/main/default/objects/int_Affaire__c/fields/dateOuvAffaire__c.field-meta.xml
<CustomField>
    <fullName>dateOuvAffaire__c</fullName>
    <label>dateOuvAffaire</label>
    <type>DateTime</type>
</CustomField>