force-app/main/default/objects/int_Affaire__c/fields/datepublication__c.field-meta.xml
<CustomField>
    <fullName>datepublication__c</fullName>
    <label>datepublication</label>
    <type>Date</type>
</CustomField>