force-app/main/default/objects/int_Affaire__c/fields/DateReception__c.field-meta.xml
<CustomField>
    <fullName>DateReception__c</fullName>
    <label>DateReception</label>
    <type>Date</type>
</CustomField>