force-app/main/default/objects/int_Affaire__c/fields/DateSortieVentePrev__c.field-meta.xml
<CustomField>
    <fullName>DateSortieVentePrev__c</fullName>
    <label>DateSortieVentePrev</label>
    <type>Date</type>
</CustomField>