force-app/main/default/objects/int_Affaire__c/fields/FlagAnnulation__c.field-meta.xml
<CustomField>
    <fullName>FlagAnnulation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FlagAnnulation</label>
    <type>Checkbox</type>
</CustomField>