force-app/main/default/objects/int_Affaire__c/fields/libelleAffaire__c.field-meta.xml
<CustomField>
    <fullName>libelleAffaire__c</fullName>
    <label>libelleAffaire</label>
    <type>TextArea</type>
</CustomField>