force-app/main/default/objects/int_Affaire__c/fields/lll_aff__c.field-meta.xml
<CustomField>
    <fullName>lll_aff__c</fullName>
    <label>lll_aff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>