force-app/main/default/objects/int_Affaire__c/fields/montantProvisionsGarantie__c.field-meta.xml
<CustomField>
    <fullName>montantProvisionsGarantie__c</fullName>
    <label>montantProvisionsGarantie</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>