force-app/main/default/objects/int_Affaire__c/fields/montantPv__c.field-meta.xml
<CustomField>
    <fullName>montantPv__c</fullName>
    <label>montantPv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>