force-app/main/default/objects/int_Affaire__c/fields/num_tim__c.field-meta.xml
<CustomField>
    <fullName>num_tim__c</fullName>
    <label>num_tim</label>
    <length>255</length>
    <type>Text</type>
</CustomField>