force-app/main/default/objects/int_Affaire__c/fields/NumAvCde__c.field-meta.xml
<CustomField>
    <fullName>NumAvCde__c</fullName>
    <label>Numéro avenant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>