force-app/main/default/objects/int_Affaire__c/fields/raisonSocialeClient__c.field-meta.xml
<CustomField>
    <fullName>raisonSocialeClient__c</fullName>
    <label>raisonSocialeClient</label>
    <type>TextArea</type>
</CustomField>