force-app/main/default/objects/int_Affaire__c/fields/typeEvenement__c.field-meta.xml
<CustomField>
    <fullName>typeEvenement__c</fullName>
    <label>typeEvenement</label>
    <length>2</length>
    <type>Text</type>
</CustomField>